# tinyLLM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  out.txt
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake
docs/: bugs.md  performance.md
src/: debug.h  main.cpp
src/tokenizer/: base64.hpp  greedy_tokenizer.cpp  greedy_tokenizer.hpp  hashmap_tokenizer.cpp  hashmap_tokenizer.hpp  map_tokenizer.cpp  map_tokenizer.hpp  tokenizer.hpp
test/: tokenizer_test.cpp
